[GH-29] refactor(paas): update aws deployments